<resources>
    <string name="app_name">UdacityP4ProjectMusicPlayer</string>

    <string name="settingsOption0state0">Show song time remaining</string>
    <string name="settingsOption0state1">Show total song time</string>

    <string name="settingsOption1state0">Hide song rating</string>
    <string name="settingsOption1state1">Show song rating</string>

    <string name="defaultSongTitle">No Title</string>
    <string name="defaultSongArtist">No Artist</string>

    <string name="song0">All in a Decade\'s Work</string>
    <string name="song1">The Long Construction</string>
    <string name="song2">Population - 1</string>
    <string name="song3">Prelude to War</string>
    <string name="song4">Attack on the Colony</string>
    <string name="song5">Roslin and Adama</string>
    <string name="song6">The Winds of Winter</string>
    <string name="song7">The Light of the Seven</string>
    <string name="song8">Enterprising Young Men</string>
    <string name="song9">Logo and Prosper</string>
    <string name="song10">Night on the Yorktown</string>
    <string name="song11">A Lesson in Vulcan Mineralogy</string>
    <string name="song12">The A400</string>
    <string name="song13">A Calculated Infiltration</string>
    <string name="song14">It\'s All Been Done</string>
    <string name="song15">Brian Wilson</string>
    <string name="song16">Come With Me Now</string>
    <string name="song17">Shut Up and Dance</string>
    <string name="song18">CLU</string>
    <string name="song19">Son of Flynn</string>

    <string name="artist0">Chris Tilton</string>
    <string name="artist1">Chris Tilton</string>
    <string name="artist2">Chris Tilton</string>
    <string name="artist3">Bear McCreary</string>
    <string name="artist4">Bear McCreary</string>
    <string name="artist5">Bear McCreary</string>
    <string name="artist6">Ramin Djawadi</string>
    <string name="artist7">Ramin Djawadi</string>
    <string name="artist8">Michael Giacchino</string>
    <string name="artist9">Michael Giacchino</string>
    <string name="artist10">Michael Giacchino</string>
    <string name="artist11">Michael Giacchino</string>
    <string name="artist12">Michael Giacchino</string>
    <string name="artist13">Henry Jackman</string>
    <string name="artist14">Barenaked Ladies</string>
    <string name="artist15">Barenaked Ladies</string>
    <string name="artist16">Kongos</string>
    <string name="artist17">Walk the Moon</string>
    <string name="artist18">Daft Punk</string>
    <string name="artist19">Daft Punk</string>


    <string name="podcast0">Giant Bombcast</string>
    <string name="podcast1">Welcome to Nightvale</string>
    <string name="podcast2">Wait Wait Don\'t Tell Me</string>
    <string name="podcast3">Savage Lovecast</string>
    <string name="podcast4">Pop Culture Happy Hour</string>
    <string name="podcast5">Wolf 359</string>
    <string name="podcast6">99% Invisible</string>
    <string name="podcast7">Hardcore History</string>
    <string name="podcast8">Giant Beastcast</string>
    <string name="podcast9">The Nerdist</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="remaining">Remaining</string>
    <string name="total">Total</string>
    <string name="unmute">Unmute</string>
    <string name="album_cover">Album Cover</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause_button">Play Pause Button</string>
    <string name="next_song">Next Song</string>
    <string name="mute">Mute</string>
</resources>
