<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/identifier_text_view"
        android:text="THIS IS WHERE YOU CAN CHANGE APP SETTINGS"/>

    <LinearLayout
        style="@style/settings_page_item_linear_layout"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/settings_textView_option_0_state_0"
            style="@style/settings_page_item_not_selected"
            android:text="@string/settingsOption0state0" />

        <ToggleButton
            android:id="@+id/time_display_switch"
            style="@style/settings_page_switch"
            android:checked="true"
            android:textOff="@string/remaining"
            android:textOn="@string/total" />

        <TextView
            android:id="@+id/settings_textView_option_0_state_1"
            style="@style/settings_page_item_selected"
            android:text="@string/settingsOption0state1" />

    </LinearLayout>

    <LinearLayout style="@style/settings_page_item_linear_layout">

        <TextView
            android:id="@+id/settings_textView_option_1_state_0"
            style="@style/settings_page_item_not_selected"
            android:text="@string/settingsOption1state0" />

        <ToggleButton
            android:id="@+id/show_rating_switch"
            style="@style/settings_page_switch"
            android:checked="true"
            android:textOff="@string/hide"
            android:textOn="@string/show" />

        <TextView
            android:id="@+id/settings_textView_option_1_state_1"
            style="@style/settings_page_item_selected"
            android:text="@string/settingsOption1state1" />

    </LinearLayout>

</LinearLayout>